updated main page message

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>test website</h1>
+        <h1>im working on it</h1>
     </div>
 </body>
 </html>
