added nav links

--- a/index.html
+++ b/index.html
@@ -1,14 +1,35 @@
 <!DOCTYPE html>
+
 <html lang="en">
+
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> website soon</title>
     <link rel="stylesheet" href="stylesheet.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+
 </head>
 <body>
+
     <div class="container">
-        <h1>im working on it</h1>
+    
+    <div class="navLinks">
+        <h2>
+        <p>
+            <span class="selected"> <a href="https://www.actuallykron.com">Home</a> </span> -
+            <span class="notSelected"> <a href="/projects">Projects</a> </span> -
+            <span class="notSelected"> <a href="/todo">To Do</a> </span> - 
+            <span class="notSelected"> <a href="/contact">Contact</a> </span>
+        </p>
+        </h2>
     </div>
+
+    <div class="mainContent"> 
+        <h1> im working on it </h1>
+        <p> website is a work in progress. please ignore the mess </p>
+    </div>
+
+    </div>
+
 </body>
 </html>
