--- a/404.html
+++ b/404.html
@@ -13,19 +13,9 @@
 
     <div class="container">
     
-    <div class="navLinks">
-        <h2>
-        <p>
-            <span class="selected"> <a href="https://www.actuallykron.com">Home</a> </span> -
-            <span class="notSelected"> <a href="/projects">Projects</a> </span> -
-            <span class="notSelected"> <a href="/todo">To Do</a> </span> - 
-            <span class="notSelected"> <a href="/contact">Contact</a> </span>
-        </p>
-        </h2>
-    </div>
-
     <div class="mainContent"> 
         <h1> 404: page not found </h1>
+        <h2> head back <a href="https://www.actuallykron.com"> home</a></h2>
     </div>
 
     </div>
