added project, contact and to do page

--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
     </div>
 
     <div class="mainContent"> 
-        <h1> im working on it </h1>
+        <h1> contact page </h1>
         <p> website is a work in progress. please ignore the mess </p>
     </div>
 
