--- a/todo.html
+++ b/todo.html
@@ -25,7 +25,7 @@
     </div>
 
     <div class="mainContent"> 
-        <h1> im working on it </h1>
+        <h1> todo page </h1>
         <p> website is a work in progress. please ignore the mess </p>
     </div>
 
