added blog page

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <span class="selected"> <a href="/index">Home</a> </span> -
             <span class="notSelected"> <a href="/projects">Projects</a> </span> -
             <span class="notSelected"> <a href="/todo">To Do</a> </span> - 
+            <span class="notSelected"> <a href="/blog">Blog</a> </span> - 
             <span class="notSelected"> <a href="/contact">Contact</a> </span>
         </p>
         </h2>
