--- a/blog.html
+++ b/blog.html
@@ -26,7 +26,7 @@
     </div>
 
     <div class="mainContent"> 
-        <h1> projects page </h1>
+        <h1> blog page </h1>
         <p> website is a work in progress. please ignore the mess </p>
     </div>
 
