added js nav bar

--- a/index.html
+++ b/index.html
@@ -15,13 +15,8 @@
     
     <div class="navLinks">
         <h2>
-        <p>
-            <span class="selected"> <a href="/index">Home</a> </span> -
-            <span class="notSelected"> <a href="/projects">Projects</a> </span> -
-            <span class="notSelected"> <a href="/todo">To Do</a> </span> - 
-            <span class="notSelected"> <a href="/blog">Blog</a> </span> - 
-            <span class="notSelected"> <a href="/contact">Contact</a> </span>
-        </p>
+            <div id="navbar"></div>
+            <script src="load-nav.js"></script>
         </h2>
     </div>
 
