--- a/contact.html
+++ b/contact.html
@@ -13,22 +13,17 @@
 
     <div class="container">
     
-    <div class="navLinks">
-        <h2>
-        <p>
-            <span class="selected"> <a href="/index">Home</a> </span> -
-            <span class="notSelected"> <a href="/projects">Projects</a> </span> -
-            <span class="notSelected"> <a href="/todo">To Do</a> </span> - 
-            <span class="notSelected"> <a href="/blog">Blog</a> </span> -
-            <span class="notSelected"> <a href="/contact">Contact</a> </span>
-        </p>
-        </h2>
-    </div>
+        <div class="navLinks">
+            <h2>
+                <div id="navbar"></div>
+                <script src="load-nav.js"></script>
+            </h2>
+        </div>
 
-    <div class="mainContent"> 
-        <h1> contact page </h1>
-        <p> website is a work in progress. please ignore the mess </p>
-    </div>
+        <div class="mainContent"> 
+            <h1> contact page </h1>
+            <p> website is a work in progress. please ignore the mess </p>
+        </div>
 
     </div>
 
