added thought wall

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 <h2><a href="blogs.html"> Blogs </a></h2>
 <p> Sometimes I write blogs, mainly about game dev.</p>
 
-<!-- <h2><a href="thought-wall.html"> Thought Wall </a></h2>
-<p> A wall of random thoughts. </p> -->
+<h2><a href="thought-wall.html"> Thought Wall </a></h2>
+<p> A wall of unsorted, possibly random thoughts. </p>
 
 <h2><a href="projects.html"> Projects </a></h2>
 <p> Here are some of the projects that I've worked on over the last couple of years.</p>
