--- a/thought-wall.html
+++ b/thought-wall.html
@@ -18,29 +18,13 @@
 <p>A place for random bits of writting that don't really fit anywhere else. Hopefully you can find something useful to you.</p>
 </nav>
 
-<h2> I haven't thought anything yet.</h2>
+<h2> Long Tutorials (04/09/2024)</h2>
 <p>
-  I should start thinking.
-
+  When I was first learning Godot so many of the tutorials that I watched were long, way too drawn out and made me want to bang my head against a wall before the topic of the video was even covered.
+  I don't really see the need for a tutorial to be nothing but straight to the point. It's even annoying when people introduce themselves. No one cares, get to the point and teach me what I want to know.
+  If you've ever thought about making tutorials, respect the viewer's time. You probably won't benefit as much as yourself but you'll be helping out a whole lot of people in the long run. 
+  I'm not trying to be mean, I just dislike long pointless waffle in tutorial videos.
 </p>
-
-<!-- <h2><a href=""> [Blog 1 Title] </a></h2>
-<p>
-  Description: a blog about something <br>
-  Posted: 01/09/2024
-</p>
-
-<h2><a href=""> [Blog 2 Title] </a></h2>
-<p>
-  Posted: 01/09/2024 <br>
-  Description: a blog about something
-</p>
-
-<h2><a href=""> [Blog 3 Title] </a></h2>
-<p>
-  Posted: 01/09/2024 <br>
-  Description: a blog about something
-</p> -->
 
   <div class="debug-grid"></div>
   <script src="script.js"></script>
