added links to link page

--- a/links.html
+++ b/links.html
@@ -14,29 +14,23 @@
 
 <!-- <label class="debug-toggle-label"><input type="checkbox" class="debug-toggle" /> Debug mode</label> -->
 <nav id="TOC" role="doc-toc">
-<h1 id="toc-title">You can find me in all of thse places</h1>
+<h1 id="toc-title">You can find me at these places</h1>
 </nav>
 
-<h2> Todo... </h2>
-<p> add links</p>
+<h2><a href="">Itch.io</a></h2>
+<p> I post all of my games here. Go play some! (please) </p>
 
-<!-- <h2><a href=""> [Blog 1 Title] </a></h2>
-<p>
-  Description: a blog about something <br>
-  Posted: 01/09/2024
-</p>
+<h2> <a href="">Twitter</a> </h2>
+<p> Yes I know, Twitter bad, but all the alternatives lack content.</p>
 
-<h2><a href=""> [Blog 2 Title] </a></h2>
-<p>
-  Posted: 01/09/2024 <br>
-  Description: a blog about something
-</p>
+<h2><a href="">YouTube</a></h2>
+<p> I make game dev videos from time to time. </p>
 
-<h2><a href=""> [Blog 3 Title] </a></h2>
-<p>
-  Posted: 01/09/2024 <br>
-  Description: a blog about something
-</p> -->
+<h2><a href="">Newgrounds</a></h2>
+<p> Slowly uploading my games to Newgrounds too, however for now Itch is the best place to play all my games.</p>   
+
+<h2> Anywhere else... </h2>
+<p> If I'm anywhere else that I've forgot to put here I'll be under @actuallykron </p>
 
   <div class="debug-grid"></div>
   <script src="script.js"></script>
