updated index page

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 <!-- <label class="debug-toggle-label"><input type="checkbox" class="debug-toggle" /> Debug mode</label> -->
 <nav id="TOC" role="doc-toc">
 <h1 id="toc-title">Hello o/</h1>
-<p> Hi there, welcome to <b> actuallykron [dot] com</b>. I'm kron and I <a href="blogs.html">write</a> about game dev, make <a href="https://www.youtube.com/@actuallykron", target="_blank">videos</a> about game dev and <a href="projects.html">do</a> game dev.</p>
+<!-- <p> Hi there, welcome to <b> actuallykron [dot] com</b>. I'm kron and I <a href="blogs.html">write</a> about game dev, make <a href="https://www.youtube.com/@actuallykron", target="_blank">videos</a> about game dev and <a href="projects.html">do</a> game dev.</p> -->
+<p>Hi there, welcome to <b>actuallykron [dot] com</b> I'm kron and I do things mainly related to game development. More info below!</p>
 </nav>
 
 <h2><a href="blogs.html"> Blogs </a></h2>
@@ -23,7 +24,7 @@
 <p> A wall of unsorted, possibly random thoughts. </p>
 
 <h2><a href="projects.html"> Projects </a></h2>
-<p> Here are some of the projects that I've worked on over the last couple of years.</p>
+<p> Links to most of the projects I've worked on.</p>
 
 <h2><a href="contact.html"> Contact </a></h2>
 <p> Want to get in touch? You can find me at these places.</p>
