added hyperlinks to link page
- forgot to do this before lol

--- a/links.html
+++ b/links.html
@@ -17,16 +17,16 @@
 <h1 id="toc-title">You can find me at these places</h1>
 </nav>
 
-<h2><a href="">Itch.io</a></h2>
+<h2><a href="https://actuallykron.itch.io/" target="_blank">Itch.io</a></h2>
 <p> I post all of my games here. Go play some! (please) </p>
 
-<h2> <a href="">Twitter</a> </h2>
+<h2> <a href="https://twitter.com/actuallykron" target="_blank">Twitter</a> </h2>
 <p> Yes I know, Twitter bad, but all the alternatives lack content.</p>
 
-<h2><a href="">YouTube</a></h2>
+<h2><a href="https://www.youtube.com/@actuallyKron" target="_blank">YouTube</a></h2>
 <p> I make game dev videos from time to time. </p>
 
-<h2><a href="">Newgrounds</a></h2>
+<h2><a href="https://actuallykron.newgrounds.com/" target="_blank">Newgrounds</a></h2>
 <p> Slowly uploading my games to Newgrounds too, however for now Itch is the best place to play all my games.</p>   
 
 <h2> Anywhere else... </h2>
