temp project page link
- a temp link to an itch collection of my games until i finish the page

--- a/projects.html
+++ b/projects.html
@@ -18,7 +18,9 @@
 </nav>
 
 <h2> Oops... </h2>
-<p> I haven't got around to adding my projects to this page. I'm sure I'll get around to it soon... ish.</p>
+<p> I haven't got around to adding my projects to this page. I'm sure I'll get around to it soon... ish. </p>
+
+<p> In the meantime you can view all of my games <a href="https://itch.io/c/1555388/games-ive-made" target="_blank">here</a>. </p>
 
 <!-- <h2><a href=""> [Blog 1 Title] </a></h2>
 <p>
