--- a/thought-wall.html
+++ b/thought-wall.html
@@ -18,11 +18,35 @@
 <p>A place for random bits of writting that don't really fit anywhere else. Hopefully you can find something useful to you.</p>
 </nav>
 
+<h2> Blocking Blue Checkmark Accounts (09/09/2024)</h2>
+<p>
+  For some reason, there's a bunch of people on Twitter who will block accounts that have blue checkmarks. There's even a browser extension that will do it for you. I just don't understand this.
+  For those people who don't use twitter, if you have a blue checkmark it generally means you paid for premium. I don't really see any problem with this. You pay money, and get some benefits in return.
+  The biggest one being the visibility boost.
+</p>
+<p>
+  I've seen people say they block accounts because they don't like people who have supported Twitter.
+  I don't understand this either as just by being on the platform you're also supporting Twitter. You're viewing ads, engaging in posts, posting yourself and giving the platform more content to profit from.
+  Also the people paying for premium aren't doing it to support Twitter, they're doing it for the benefits they get in return. If you're trying to market your game, it makes sense to pay money to get more eyes on your content.
+</p>
+<p>
+  I've also seen people say it's because blue checkmark accounts are genrally just spammers and shit posters. I get this, I've blocked some accounts for these reasons, but only
+  after they've annoyed me, not because they have a blue checkmark.
+</p>
+<p>
+  I follow some blue checkmark accounts on Twitter that post somme great game dev content. Imagine if I had a browser extension that would've just blocked all of those accounts. 
+  I would've missed out on a bunch of good stuff.
+</p>
+<p>
+  Maybe I'm missing something but to me blocking accounts just because they've paid for premium is honestly a little silly and I think you're missing out on great content and hurting the creator way more than you're hurting Twitter.
+  If I have missed something, please do reach out and educate me,<a href="https://twitter.com/actuallykron", target="_blank"><em><b> @actuallykron</b></em></a>
+</p>
+
 <h2> Long Tutorials (04/09/2024)</h2>
 <p>
   When I was first learning Godot so many of the tutorials that I watched were long, way too drawn out and made me want to bang my head against a wall before the topic of the video was even covered.
   I don't really see the need for a tutorial to be nothing but straight to the point. It's even annoying when people introduce themselves. No one cares, get to the point and teach me what I want to know.
-  If you've ever thought about making tutorials, respect the viewer's time. You probably won't benefit as much as yourself but you'll be helping out a whole lot of people in the long run. 
+  If you've ever thought about making tutorials, respect the viewer's time. You probably won't benefit as much yourself but you'll be helping out a whole lot of people in the long run. 
   I'm not trying to be mean, I just dislike long pointless waffle in tutorial videos.
 </p>
 
