updated thought wall post

--- a/thought-wall.html
+++ b/thought-wall.html
@@ -42,6 +42,8 @@
   If I have missed something, please do reach out and educate me,<a href="https://twitter.com/actuallykron", target="_blank"><em><b> @actuallykron</b></em></a>
 </p>
 
+<h6>i refuse to call Twitter X, it's fucking stupid</h6>
+
 <h2> Long Tutorials (04/09/2024)</h2>
 <p>
   When I was first learning Godot so many of the tutorials that I watched were long, way too drawn out and made me want to bang my head against a wall before the topic of the video was even covered.
@@ -49,6 +51,7 @@
   If you've ever thought about making tutorials, respect the viewer's time. You probably won't benefit as much yourself but you'll be helping out a whole lot of people in the long run. 
   I'm not trying to be mean, I just dislike long pointless waffle in tutorial videos.
 </p>
+
 
   <div class="debug-grid"></div>
   <script src="script.js"></script>
