--- a/links.html
+++ b/links.html
@@ -21,8 +21,11 @@
 <p> I post all of my games here. Go play some! (please) </p>
 
 <h2> <a href="https://twitter.com/actuallykron" target="_blank">Twitter</a> </h2>
-<p> Yes I know, Twitter bad, but all the alternatives lack content.</p>
+<p> I don't tweet much but I have twitter.</p>
 
+<h2> <a href="https://bsky.app/profile/actuallykron.bsky.social" target="_blank">Bluesky</a> </h2>
+<p> I also have bluesky, because twitter bad and that.</p>
+  
 <h2><a href="https://www.youtube.com/@actuallyKron" target="_blank">YouTube</a></h2>
 <p> I make game dev videos from time to time. </p>
 
