--- a/thought-wall.html
+++ b/thought-wall.html
@@ -18,6 +18,11 @@
 <p>A place for random bits of writting that don't really fit anywhere else. Hopefully you can find something useful to you.</p>
 </nav>
 
+<h2> fuck linux (24/05/2025)</h2>
+<p>
+  spent the last couple of hours trying to setup something on a VPS. it was going pretty well until it wasn't. anywya, fuck linux.
+</p>
+  
 <h2> Blocking Blue Checkmark Accounts (09/09/2024)</h2>
 <p>
   For some reason, there's a bunch of people on Twitter who will block accounts that have blue checkmarks. There's even a browser extension that will do it for you. I just don't understand this.
