thought wall update

--- a/thought-wall.html
+++ b/thought-wall.html
@@ -18,6 +18,13 @@
 <p>A place for random bits of writting that don't really fit anywhere else. Hopefully you can find something useful to you.</p>
 </nav>
 
+<h2>Bought Bloodshed yesterday (04/06/2025)</h2>
+
+<p>I bought Bloodshed yesterday as it was on sale (it was 55% off, what a bargain) and wow it's great. 
+  The best way to desribe it is Vampire Survivors if it was a boomer shooter. 
+  I really liked VS so it's no suprise that I really like this game too. If you like VS, I would recommend this game. 
+  Maybe I'll write a full write up about my thoughts on this at some point. </p>
+
 <h2> fuck linux (24/05/2025)</h2>
 <p>
   spent the last couple of hours trying to setup something on a VPS. it was going pretty well until it wasn't. anywya, fuck linux.
