update thought wall

--- a/thought-wall.html
+++ b/thought-wall.html
@@ -18,9 +18,11 @@
 <p>A place for random bits of writting that don't really fit anywhere else. Hopefully you can find something useful to you.</p>
 </nav>
 
-<h2>Bought Bloodshed yesterday (04/06/2025)</h2>
+<h2> Washing Machine Game (04/06/2025)</h2>
+<p>Game Idea: you play as a washing machine.  don't know what the gameplay would be but I imagine it being 3D, third person and with PS1 style graphics. That's kinda it. thx bye</p>
 
-<p>I bought Bloodshed yesterday as it was on sale (it was 55% off, what a bargain) and wow it's great. 
+<h2>Bought Bloodshed yesterday (04/06/2025)</h2>
+<p>I bought <a href="https://store.steampowered.com/app/2747550/Bloodshed/" target="_blank" >Bloodshed</a> yesterday as it was on sale (it was 55% off, what a bargain) and wow it's great. 
   The best way to desribe it is Vampire Survivors if it was a boomer shooter. 
   I really liked VS so it's no suprise that I really like this game too. If you like VS, I would recommend this game. 
   Maybe I'll write a full write up about my thoughts on this at some point. </p>
