update thought wall

--- a/thought-wall.html
+++ b/thought-wall.html
@@ -18,6 +18,9 @@
 <p>A place for random bits of writting that don't really fit anywhere else. Hopefully you can find something useful to you.</p>
 </nav>
 
+<h2> solo dev (07/06/2025)</h2>
+<p>cant wait to solo develop a game with a team of 9</p>
+
 <h2> Washing Machine Game (04/06/2025)</h2>
 <p>Game Idea: you play as a washing machine.  don't know what the gameplay would be but I imagine it being 3D, third person and with PS1 style graphics. That's kinda it. thx bye</p>
 
