--- a/thought-wall.html
+++ b/thought-wall.html
@@ -51,7 +51,7 @@
   after they've annoyed me, not because they have a blue checkmark.
 </p>
 <p>
-  I follow some blue checkmark accounts on Twitter that post somme great game dev content. Imagine if I had a browser extension that would've just blocked all of those accounts. 
+  I follow some blue checkmark accounts on Twitter that post some great game dev content. Imagine if I had a browser extension that would've just blocked all of those accounts. 
   I would've missed out on a bunch of good stuff.
 </p>
 <p>
@@ -75,3 +75,4 @@
 
 </body>
 </html>
+
