new links to link.html

--- a/links.html
+++ b/links.html
@@ -32,6 +32,12 @@
 <h2><a href="https://actuallykron.newgrounds.com/" target="_blank">Newgrounds</a></h2>
 <p> Slowly uploading my games to Newgrounds too, however for now Itch is the best place to play all my games.</p>   
 
+<h2>Email (for a chat)</h2>
+<p>hello@actuallykron.com</p>
+
+<h2>Business Email</h2>
+<p>actuallykron.biz [@] gmail.com</p>
+  
 <h2> Anywhere else... </h2>
 <p> If I'm anywhere else that I've forgot to put here I'll be under @actuallykron </p>
 
@@ -40,3 +46,4 @@
 
 </body>
 </html>
+
