--- a/thought-wall.html
+++ b/thought-wall.html
@@ -18,6 +18,10 @@
 <p>A place for random bits of writting that don't really fit anywhere else. Hopefully you can find something useful to you.</p>
 </nav>
 
+<h2> spotify ads (05/01/2026)</h2>
+<p>been listening to podcasts on spotify and every 10 mins or so they play ads. kinda annoying as i pay for premium but whats even more annoying is 
+  the fact that you can just skip the ads instantly with the skip forward button. If i can do this, why even show me the a??  why make me tab out and skip the ad?? it's just annoying. </p>
+  
 <h2> solo dev (07/06/2025)</h2>
 <p>cant wait to solo develop a game with a team of 9</p>
 
@@ -75,4 +79,5 @@
 
 </body>
 </html>
+
 
