added some old thoughts to wall

--- a/thought-wall.html
+++ b/thought-wall.html
@@ -21,6 +21,47 @@
 <h2> spotify ads (05/01/2026)</h2>
 <p>been listening to podcasts on spotify and every 10 mins or so they play ads. kinda annoying as i pay for premium but whats even more annoying is 
   that you can just skip the ads instantly with the skip forward button. If i can do this, why even show me the ad in the first place??  why make me tab out and skip the ad?? so fucking annoying. </p>
+
+<h2> sorry linux (13/11/2025)</h2>
+<p> okay maybe I was too harsh on linux before. it isn't THAT bad. still wouldn't recommend it though (yet???)</p>
+  
+<h2> thoughtful october #31 (31/10/2025)</h2>
+<p> ran out of thoughts. see you next year.</p>
+<p> happy halloween</p>
+
+<h2> thoughtful october #15 (15/10/2025)</h2>
+<p> why are fish so cool </p>
+
+<h2> thoughtful october #10 (10/10/2025)</h2>
+<p> my friends seem to think that a single gorilla could take 100 humans in a fight. 
+  there is just no way this would happen. like i get it, gorillas are pretty strong but 100 
+  humans?? all it takes is one of those hundred people to poke the gorilla in the eye and he is
+  basically done for. with the 100 people dog pilling him i think its very possible for him to get poked in eyes. 
+  <br> 
+  even if they dont do that i still find it almost impossible to believe the humans would lose.
+  the only way they do is if they went in one by one trying ti fight the gotilla on their own but that would just be stupid. 
+  but some humans are pretty stupid so... maybe they would lose.
+</p>
+
+<h2> thoughtful october #7 (07/10/2025)</h2>
+<p> isnt it weird how advertisers take our data and then use it to recommend
+  us products they know we will like and are interested and we sre like no fuck you
+for using my data and doing that. 
+<br>
+dont get me wrong, fuck them for using my data and doing that but also it kinda feels like
+something I should want</p>
+
+<h2> thoughtful october #6 (06/10/2025)</h2>
+<p> i really like decompiling other games snd exploring how the developers designed their systems. 
+  
+  its a good learning experience and also reassuring to see that their code is just as messy as mine
+</p>
+  
+<h2> thoughtful october #4 (04/10/2025)</h2>
+<p> games don't need to be fun and I can't believe its even a debate </p>
+  
+<h2> thoughtful october #1 (01/10/2025)</h2>
+<p>I don't update this enough so this October i'm going to post more thoughts </p>
   
 <h2> solo dev (07/06/2025)</h2>
 <p>cant wait to solo develop a game with a team of 9</p>
@@ -79,6 +120,7 @@
 
 </body>
 </html>
+
 
 
 
